--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 0.1.0
-	maven_group = thepoultryman
-	archives_base_name = mod-name
+	maven_group = io.github.thepoultryman
+	archives_base_name = ridiculed-egg
 
 # Dependencies
 	fabric_version=0.51.1+1.18.2
+
+# Testing Tools
+	modmenu_version = 3.2.2
